fix unnecessary line in char-counter, counter resetting on post, and text not wrapping when it doesn't have spaces

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -81,9 +81,11 @@ article:hover .icons {
  
  .tweet-text {
    margin-left: 3%;
+   margin-right: 3%;
    display: flex;
    justify-content: start;
    flex-wrap: wrap;
+   word-break: break-word;
  }
 
  .tweet-footer {
